--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -15,16 +15,18 @@ jobs:
       - name: Install Tools
         run: |
           npm install -g @ionic/cli @capacitor/core @capacitor/cli
-          npm install
+          # Move into the correct directory before installing
+          cd myApp && npm install
 
       - name: Prepare Android Project
         run: |
+          cd myApp
           npx cap add android || echo "Android already exists"
           npx cap sync
           
       - name: Build APK with Gradle
         run: |
-          cd android
+          cd myApp/android
           chmod +x gradlew
           ./gradlew assembleDebug
 
@@ -32,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: LoveCounter-App-APK
-          path: android/app/build/outputs/apk/debug/app-debug.apk
+          path: myApp/android/app/build/outputs/apk/debug/app-debug.apk
