--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -12,20 +12,16 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install Tools
+      - name: Install Tools & Build
         run: |
           npm install -g @ionic/cli @capacitor/core @capacitor/cli
-          cd myApp && npm install
-
-      - name: Prepare Android Project
-        run: |
-          cd myApp
-          npx cap add android || echo "Android already exists"
+          npm install
+          npx cap add android || echo "Android exists"
           npx cap sync
           
       - name: Build APK with Gradle
         run: |
-          cd myApp/android
+          cd android
           chmod +x gradlew
           ./gradlew assembleDebug
 
@@ -33,4 +29,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: LoveCounter-App-APK
-          path: myApp/android/app/build/outputs/apk/debug/app-debug.apk
+          path: android/app/build/outputs/apk/debug/app-debug.apk
